--- a/src/cantal.css
+++ b/src/cantal.css
@@ -72,6 +72,7 @@
 }
 
 .cantal-headercell-filter {
+  appearance: none;
   background-color: var(--cell-background-color);
   color: var(--cell-color);
   margin: 4px 0 0;
