--- a/src/cantal.css
+++ b/src/cantal.css
@@ -74,6 +74,9 @@
 .cantal-headercell-filter {
   appearance: none;
   background-color: var(--cell-background-color);
+  border-radius: 2px;
+  border-style: solid;
+  border-width: 1px;
   color: var(--cell-color);
   margin: 4px 0 0;
 }
